force-app/main/default/objects/Vehicle__c/fields/Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Model</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>