force-app/main/default/objects/Vehicle__c/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <defaultValue>&quot;Black&quot;</defaultValue>
    <label>Exterior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exterior_Colors</valueSetName>
    </valueSet>
</CustomField>