force-app/main/default/objects/Vehicle__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <label>Package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>