force-app/main/default/objects/Vehicle__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>25000</defaultValue>
    <label>Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>