force-app/main/default/objects/Vehicle__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short_Range</fullName>
                <label>Short Range</label>
            </value>
            <value>
                <fullName>Long_Range</fullName>
                <label>Long Range</label>
            </value>
            <value>
                <fullName>Medium_Range</fullName>
                <label>Medium Range</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>