force-app/main/default/objects/Vehicle__c/fields/Vehicle_Details_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Details_for_Flow__c</fullName>
    <formula
    >Car_Model__r.Name  &amp; &quot;-&quot; &amp; Year__c &amp;  &quot;-&quot; &amp; Wheels__c &amp; &quot;-&quot; &amp; VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Details for Flow</label>
    <type>Text</type>
</CustomField>