force-app/main/default/objects/Vehicle__c/listViews/Inventory.listView-meta.xml
<ListView>
    <fullName>Inventory</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Package__c</columns>
    <columns>Year__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>Inventory</label>
</ListView>